<?xml version="1.0"?>
<package format="2">
  <name>eulerian_contour_path_planner</name>
  <version>0.6.4</version>
  <description>Path planning provides a move_base_flex plugin that can plan a path that will fully travel around the environmental objects of a grid map.</description>
  <author email="yq9vc@virginia.edu">Yongming Qin</author>
  <maintainer email="yq9vc@virginia.edu">Yongming Qin</maintainer>

  <license>Apache 2.0</license>
  <url>http://wiki.ros.org/**tbd**</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav_core</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_flex</exec_depend>
  <test_depend>cv_bridge</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>tracking_pid</test_depend>

  <export>
    <nav_core plugin="${prefix}/ecpp_plugin.xml"/>
  </export>

</package>
